--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name: Twister
 description: a powerful jekyll theme
-url: #place url
+url: shawonbd.github.io/new
 gems: [jekyll-paginate]
-baseurl: #place folder name if site is served in subfolder
+baseurl: shawonbd.github.io/new
 permalink: /:title/
 paginate: 8
 paginate_path: /page/:num/
